We have a working lobby

--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,16 @@
 <!doctype html>
-Hi
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+
+<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+Current players:
+<ul id="players"></ul>
+Set nick: <input type="text" id="nick"> <button id="nick_accept">Accept</button>
 <script src="/socket.io/socket.io.js"></script>
-<script>
-  var socket = io.connect('/');
-  socket.on('news', function (data) {
-    console.log(data);
-    socket.emit('my other event', { my: 'data' });
-  });
-</script>
+<script src="/static/client.js"></script>
