It has turns now!

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,7 @@
       
       <!-- Optional theme -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+      <link rel="stylesheet" href="/static/style.css">
       
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,7 +35,7 @@
       <h2>Players</h2>
       <div id="players-game"></div>
       <h2>My Hand</h2>
-      <ul id="my-hand"></ul>
+      <div id="my-hand" class="panel"></div>
     </div>
     <div id="gameover" style="display:none"><h1>Everyone disconnected</h1><h2>F5 to play again</h2></div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
