--- a/static/index.html
+++ b/static/index.html
@@ -33,8 +33,8 @@
         Set nick: <input type="text" id="nick"><br><br> <button id="nick_accept" class="btn btn-lg btn-primary">Join Game</button>
         
         <br /><br /></p>
-        <p style="text-align: center" id="lobby-start">
-        <button id="start_game" class="btn btn-lg btn-success" style="display:hidden">Start game</button>
+        <p style="text-align: center; display:none" id="lobby-start">
+        <button id="start_game" class="btn btn-lg btn-success" >Start game</button>
         </p>
         </div>
     </div>
