--- a/static/index.html
+++ b/static/index.html
@@ -47,8 +47,11 @@
       
       <h2>Players</h2>
       <div id="players-game"></div>
-      <h2>
-        My Hand
+      <div style="clear:both"></div>
+      <h2>My Play Area</h2>
+        <div id="my-play"></div>
+      <div style="clear:both"></div>
+      <h2>My Hand
         <span id="my-turn-indicator" class="label label-success" style="display: none;">(it's my turn)</span>
       </h2>
       <div id="my-hand" class="panel"></div>
