--- a/static/index.html
+++ b/static/index.html
@@ -39,6 +39,7 @@
         </div>
     </div>
     <div id="game" style="display:none" class="container">
+      <span id="my-turn-indicator" class="label label-success" style="display: none;">(it's my turn)</span>
       <h1>Game</h1>
       
       <h2>Table</h2>
@@ -51,9 +52,7 @@
       <h2>My Play Area</h2>
         <div id="my-play"></div>
       <div style="clear:both"></div>
-      <h2>My Hand
-        <span id="my-turn-indicator" class="label label-success" style="display: none;">(it's my turn)</span>
-      </h2>
+      <h2>My Hand</h2>
       <div id="my-hand" class="panel"></div>
       
       <div class="panel panel-success">
