improve turn indicator

--- a/static/index.html
+++ b/static/index.html
@@ -40,6 +40,7 @@
     </div>
     <div id="game" style="display:none" class="container">
       <span id="my-turn-indicator" class="label label-success" style="display: none;">(it's my turn)</span>
+      <span id="other-turn-indicator" class="label label-info" style="display: none;"></span>
       <h1>Game</h1>
       
       <h2>Table</h2>
