--- a/static/index.html
+++ b/static/index.html
@@ -62,7 +62,7 @@
         
       </div>
     </div>
-    <div id="gameover" style="display:none" class="container"><h1>Everyone disconnected</h1><h2>F5 to play again</h2></div>
+    <div id="gameover" style="display:none" class="container"><h1 id="game-over-message">Everyone disconnected</h1><h2>F5 to play again</h2></div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
