--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
     <div id="lobby" class="container">
         <div class="jumbotron">
         <h1>Planszówkator</h1>
-        <h2>Currently playing <span id="game_title">undefined</span></h2>
+        <h2>Currently playing <span id="game_title">Medieval Game #1</span></h2>
         <h3>Waiting for players...</h3>
         <ul id="players" class="list-group"></ul>
         <p  style="text-align: center" id="lobby-login">
@@ -38,7 +38,8 @@
         </p>
         </div>
     </div>
-    <div id="game" style="display:none" class="container">
+    <div id="game" style="display:none" class="container c1">
+
       <span id="my-turn-indicator" class="label label-success" style="display: none;">(it's my turn)</span>
       <span id="other-turn-indicator" class="label label-info" style="display: none;"></span>
       <h1>Game</h1>
